# sanitize

./: .gitignore  CONTRIBUTING.md  GUI-SPEC.md  LICENSE  README.md  REFERENCE.xml  SECURITY.md  SPEC.md  pyproject.toml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  test.yml
assets/ui/: index.html
src/sanitize/: app.py  config.py  version.py
src/sanitize/core/: docx.py  ops.py  pdf.py  report.py
src/sanitize/gui/: api.py  webview_app.py
tests/integration/: test_headless.py
tests/unit/: test_docx.py  test_ops.py  test_pdf.py
